--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,11 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions: 
+      contents: write 
+      pages: write    
+      id-token: write 
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
