--- a/.github/workflows/pr-summary.yml
+++ b/.github/workflows/pr-summary.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Get PR Details and Summarize
         run: |
-          python .github/scripts/summarize_pr.py # Python 스크립트 실행
+          python .github/scripts/summarize_pr.py 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} 
