--- a/.github/workflow/pr-ai-summary.yml
+++ b/.github/workflow/pr-ai-summary.yml
@@ -3,6 +3,11 @@ name: PR AI Summary
 on:
   pull_request:
     types: [opened, reopened, synchronize]
+    branches:
+      - main
+      - develop
+      - feature/*
+      - bugfix/*
 
 jobs:
   summarize_pr:
