--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,7 @@
-name: Deploy React App to GitHub Pages
+name: deploy
 
 on:
   push:
-    branches:
-      - main
-      - gh-pages
-      - develop
-      - feature/*
-      - bugfix/*
-  pull_request:
-    branches:
-      - main
-      - gh-pages
-      - develop
-      - feature/*
-      - bugfix/*
 
 jobs:
   build-and-deploy:
