--- a/.github/workflows/pr-ai-summary.yml
+++ b/.github/workflows/pr-ai-summary.yml
@@ -3,7 +3,7 @@ name: PR AI Summary
 on:
   pull_request:
     types: [opened, reopened, synchronize]
-    
+
 jobs:
   summarize_pr:
     runs-on: ubuntu-latest
@@ -13,17 +13,24 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for accurate diff
 
       - name: Set up Python
+        id: setup-python-env
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install google-generativeai PyGithub
+        run: |
+          python -m pip install --upgrade pip
+          pip install --no--cache-dir google-generativeai PyGithub    
 
       - name: Get PR Details and Summarize
-        run: python .github/scripts/summarize_pr.py
+        run: |
+          "${{ steps.setup-python-env.outputs.python-path }}" .github/scripts/summarize_pr.py
+           
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
