--- a/.github/workflows/pr-ai-summary.yml
+++ b/.github/workflows/pr-ai-summary.yml
@@ -24,12 +24,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install --no--cache-dir google-generativeai PyGithub    
+          "${{ steps.setup-python-env.outputs.python-path }}/bin/python" -m pip install --upgrade pip
+          "${{ steps.setup-python-env.outputs.python-path }}/bin/pip" install --no-cache-dir google-generativeai PyGithub
 
       - name: Get PR Details and Summarize
         run: |
-          "${{ steps.setup-python-env.outputs.python-path }}" .github/scripts/summarize_pr.py
+          "${{ steps.setup-python-env.outputs.python-path }}/bin/python" .github/scripts/summarize_pr.py
            
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
